--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <!-- <div class="cursor"></div> -->
+    <div class="cursor"></div>
   <!-- navbar starts -->
       <div class="nav" id="navbar">
         <input type="checkbox" id="check">
