--- a/index.html
+++ b/index.html
@@ -61,8 +61,53 @@
             </div>
         </div>
         
+
         <div class="page2">
-            <div class="aboutme1">
+            <div class="center-top">
+                <h1>About me</h1>
+              <div class="lineee"></div>
+                <h4>Here you will find more information about me, what I do, and my current skills mostly in terms of programming and technology</h4>
+            </div>
+
+            <div class="center-bottom">
+            <div class="left">
+                <h3>Get to know me</h3>
+                <div class="about-details">
+                    gjffgl;adjkladkjfsd;lkfjdfl;kdjl;kdfjdlkfjf
+                    dflkajfaldfjaslfjkdf
+                    dflkasdjfldfjasdklfdas
+                    fsdfljsadhfasdlfjasdlkfd
+                    fsdfljsadhfasdlfjasdlkfddasfasd
+                    fa-barsasdf
+                    asdf
+                    asdfsdafasd
+                    fa-solidf
+                    asdfsdafasdasdf
+                    asdfsdafasdfasd
+                    fasf
+                </div>
+              </div>
+  
+  
+              <div class="right">
+              <h3>Skills:</h3>
+              <div class="skills">
+                  <div class="skill-btn">HTML</div>
+                  <div class="skill-btn">CSS</div>
+                  <div class="skill-btn">Javascript</div>
+                  <div class="skill-btn">Java</div>
+                  <div class="skill-btn">PHP</div>
+                  <div class="skill-btn">Git</div>
+                  <div class="skill-btn">Github</div>
+                  <div class="skill-btn">C++</div>
+                  <div class="skill-btn">C</div>
+                </div>
+              </div>
+          </div>
+        </div>
+
+        <div class="page3">
+            <div class="project1">
                 <div class="part1">
                     <h1>Lorem ipsum dolor sit amet.</h1>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet sequi consequuntur veritatis incidunt voluptates in debitis!</p>
@@ -82,7 +127,7 @@
 
                 </div>
             </div>
-            <div class="aboutme2">
+            <div class="project2">
                 <div class="part1 part">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
