--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Iftikhirul Hoque</title>
     <script src="https://kit.fontawesome.com/06d164d474.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
@@ -42,8 +42,8 @@
 
       <div class="page1">
           <div class="left">
-              <p class="name">Iftikhirul<br>Hoque. </p>
-              <div class="lineee" style="background-color: #4B0082;"></div>
+              <p class="name tcol">Iftikhirul<br>Hoque.</p>
+              <div class="lineee col" style="background-color: #4B0082;"></div>
               <div class="contact-front">
                   <a href="https://www.linkedin.com/in/iftikhoq/"><i class="bi bi-linkedin frontsocial"></i></a>
                   <a href="https://github.com/iftikhoq"><i class="bi bi-github frontsocial"></i></a>
@@ -55,9 +55,10 @@
 
             <div class="right">
                 <p class="title line" >Introduction:</p>
-                <p class="impText line">I am a<br><span class="highlight spline">Web Developer</span><br>and<br><span class="highlight spline h2">Competitive programmer.</span></p>
+                <p class="impText line">I am a<br><span class="highlight spline tcol">Web Developer</span><br>and<br><span class="highlight spline tcol">Competitive programmer.</span></p>
                 <p class="desc line">I have worked on multiple small project. Besides I am working on my problem solving skill.</p>
-                <a href="#" class="btn line"><span>Download CV</span></a>
+                <a href="#" class="btn line btn1"><span>Download CV</span></a>
+                <a href="#" class="btn line btn2"><span>Download CV</span></a>
             </div>
         </div>
         
@@ -65,7 +66,7 @@
         <div class="page2">
             <div class="center-top">
                 <h1>About me</h1>
-              <div class="lineee"></div>
+              <div class="lineee col"></div>
                 <h4>Here you will find more information about me, what I do, and my current skills mostly in terms of programming and technology</h4>
             </div>
 
@@ -92,34 +93,50 @@
               <div class="right">
               <h3>Skills:</h3>
               <div class="skills">
-                  <div class="skill-btn">HTML</div>
-                  <div class="skill-btn">CSS</div>
-                  <div class="skill-btn">Javascript</div>
-                  <div class="skill-btn">Java</div>
-                  <div class="skill-btn">PHP</div>
-                  <div class="skill-btn">Git</div>
-                  <div class="skill-btn">Github</div>
-                  <div class="skill-btn">C++</div>
-                  <div class="skill-btn">C</div>
+                  <div class="skill-btn col">HTML</div>
+                  <div class="skill-btn col">CSS</div>
+                  <div class="skill-btn col">Javascript</div>
+                  <div class="skill-btn col">Java</div>
+                  <div class="skill-btn col">PHP</div>
+                  <div class="skill-btn col">Git</div>
+                  <div class="skill-btn col">Github</div>
+                  <div class="skill-btn col">C++</div>
+                  <div class="skill-btn col">C</div>
                 </div>
               </div>
           </div>
         </div>
 
         <div class="page3">
-            <div class="project1">
-                <div class="part1">
+            <div class="center-top">
+                <h1>Competitive Journey and Projects</h1>
+              <div class="lineee col"></div>
+            </div>
+            <div class="cp">
+                <div class="left">
                     <h1>Lorem ipsum dolor sit amet.</h1>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet sequi consequuntur veritatis incidunt voluptates in debitis!</p>
                 </div>
-                <div class="part2">
+                <div class="right">
                     <div class="cf">
                         <img src="cf.png" alt="">
                         <h2>Codeforces</h2>
+                        <h3>Max Rating</h3>
+                        <h4 id="cfMaxRating" class="tcol"></h4>
+                        <h3>Max rank</h3>
+                        <h4 id="cfMaxRank" class="tcol"></h4>
+                        <h3>Handle</h3>
+                        <a href="https://codeforces.com/profile/ifti.k.hoq"><h4 class="tcol">ifti.k.hoq<i class="bi bi-link-45deg"></i></h4></a>
                     </div>
                     <div class="lc">
                         <img src="lc.png" alt="">
                         <h2>Leet code</h2>
+                        <h3>Total solve</h3>
+                        <h4 id="lcTotalSolve" class="tcol"></h4>
+                        <h3>Rank</h3>
+                        <h4 id="lcranking" class="tcol"></h4>
+                        <h3>Handle</h3>
+                        <a href="https://leetcode.com/u/ifti_k_hoq/"><h4 class="tcol">ifti_k_hoq<i class="bi bi-link-45deg"></i></h4></a>
                     </div>
                     <div class="seemore">
                         <h2>seemore</h2>
@@ -127,17 +144,7 @@
 
                 </div>
             </div>
-            <div class="project2">
-                <div class="part1 part">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-                <div class="part2 part">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                </div>
-                <div class="part3 part">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                </div>
-            </div>
+           
         </div>
     </main>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
