--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,8 +12,8 @@
 
 <body>
     <div class="cursor"></div>
-  <!-- navbar starts -->
-      <div class="nav" id="navbar">
+    <!-- navbar starts -->
+    <div class="nav" id="navbar">
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
             <i class="fa-solid fa-bars"></i>
@@ -21,14 +22,14 @@
         <label class="logo">
             <a href="index.html">
                 <img src="signblack.png" height="100px" width="300px">
-                <img class ="overwrite" src="signwhite.png" height="100px" width="300px">
+                <img class="overwrite" src="signwhite.png" height="100px" width="300px">
             </a>
 
         </label>
         <input type="checkbox" id="dark-mode" class="input" />
-    <label for="dark-mode" class="label">
-      <div class="circle"></div>
-    </label>
+        <label for="dark-mode" class="label">
+            <div class="circle"></div>
+        </label>
         <!-- <ul id="side">
             <li>
                 <input type="checkbox" id="switch" onchange = "darktoggle()"/>
@@ -37,96 +38,175 @@
         </ul> -->
     </div>
 
-  <!-- Navbar ends -->
-  <main>
+    <!-- Navbar ends -->
+    <main>
 
-      <div class="page1">
-          <div class="left">
-              <p class="name tcol">Iftikhirul<br>Hoque.</p>
-              <div class="lineee col" style="background-color: #4B0082;"></div>
-              <div class="contact-front">
-                  <a href="https://www.linkedin.com/in/iftikhoq/"><i class="bi bi-linkedin frontsocial"></i></a>
-                  <a href="https://github.com/iftikhoq"><i class="bi bi-github frontsocial"></i></a>
-                  <a href="https://mail.google.com/mail/?view=cm&fs=1&to=iftikhirul16@gmail.com&su=Contact%20using%20website&body=BODY"><i class="bi bi-envelope frontsocial"></i></a>
+        <div class="page1">
+            <div class="left">
+                <p class="name tcol">Iftikhirul<br>Hoque.</p>
+                <div class="lineee col" style="background-color: #4B0082;"></div>
+                <div class="contact-front">
+                    <a href="https://www.linkedin.com/in/iftikhoq/"><i class="bi bi-linkedin frontsocial"></i></a>
+                    <a href="https://github.com/iftikhoq"><i class="bi bi-github frontsocial"></i></a>
+                    <a
+                        href="https://mail.google.com/mail/?view=cm&fs=1&to=iftikhirul16@gmail.com&su=Contact%20using%20website&body=BODY"><i
+                            class="bi bi-envelope frontsocial"></i></a>
                 </div>
             </div>
 
 
 
             <div class="right">
-                <p class="title line" >Introduction:</p>
-                <p class="impText line">I am a<br><span class="highlight spline tcol">Web Developer</span><br>and<br><span class="highlight spline tcol">Competitive programmer.</span></p>
-                <p class="desc line">I have worked on multiple small project. Besides I am working on my problem solving skill.</p>
+                <p class="title line">Introduction:</p>
+                <p class="impText line">I am a<br><span class="highlight spline tcol">Web
+                        Developer</span><br>and<br><span class="highlight spline tcol">Competitive programmer.</span>
+                </p>
+                <p class="desc line">I have worked on multiple small project. Besides I am working on my problem solving
+                    skill.</p>
                 <a href="#" class="btn line btn1"><span>Download CV</span></a>
                 <a href="#" class="btn line btn2"><span>Download CV</span></a>
             </div>
         </div>
-        
+
 
         <div class="page2">
             <div class="center-top">
                 <h1>About me</h1>
-              <div class="lineee col"></div>
-                <h4>Here you will find more information about me, what I do, and my current skills mostly in terms of programming and technology</h4>
+                <div class="lineee col"></div>
+                <h4>Here you will find more information about me, what I do, and my current skills mostly in terms of
+                    programming and technology</h4>
             </div>
 
             <div class="center-bottom">
-            <div class="left">
-                <h3>Get to know me</h3>
-                <div class="about-details">
-                    gjffgl;adjkladkjfsd;lkfjdfl;kdjl;kdfjdlkfjf
-                    dflkajfaldfjaslfjkdf
-                    dflkasdjfldfjasdklfdas
-                    fsdfljsadhfasdlfjasdlkfd
-                    fsdfljsadhfasdlfjasdlkfddasfasd
-                    fa-barsasdf
-                    asdf
-                    asdfsdafasd
-                    fa-solidf
-                    asdfsdafasdasdf
-                    asdfsdafasdfasd
-                    fasf
+                <div class="left">
+                    <h3>Get to know me</h3>
+                    <div class="about-details">
+                        gjffgl;adjkladkjfsd;lkfjdfl;kdjl;kdfjdlkfjf
+                        dflkajfaldfjaslfjkdf
+                        dflkasdjfldfjasdklfdas
+                        fsdfljsadhfasdlfjasdlkfd
+                        fsdfljsadhfasdlfjasdlkfddasfasd
+                        fa-barsasdf
+                        asdf
+                        asdfsdafasd
+                        fa-solidf
+                        asdfsdafasdasdf
+                        asdfsdafasdfasd
+                        fasf
+                    </div>
                 </div>
-              </div>
-  
-  
-              <div class="right">
-              <h3>Skills:</h3>
-              <div class="skills">
-                  <div class="skill-btn col">HTML</div>
-                  <div class="skill-btn col">CSS</div>
-                  <div class="skill-btn col">Javascript</div>
-                  <div class="skill-btn col">Java</div>
-                  <div class="skill-btn col">PHP</div>
-                  <div class="skill-btn col">Git</div>
-                  <div class="skill-btn col">Github</div>
-                  <div class="skill-btn col">C++</div>
-                  <div class="skill-btn col">C</div>
+
+
+                <div class="right">
+                    <h3>Skills:</h3>
+                    <div class="skills">
+                        <div class="skill-btn col">HTML</div>
+                        <div class="skill-btn col">CSS</div>
+                        <div class="skill-btn col">Javascript</div>
+                        <div class="skill-btn col">Java</div>
+                        <div class="skill-btn col">PHP</div>
+                        <div class="skill-btn col">Git</div>
+                        <div class="skill-btn col">Github</div>
+                        <div class="skill-btn col">C++</div>
+                        <div class="skill-btn col">C</div>
+                    </div>
                 </div>
-              </div>
-          </div>
+            </div>
         </div>
 
         <div class="page3">
             <div class="center-top">
                 <h1>Competitive Journey and Projects</h1>
-              <div class="lineee col"></div>
+                <div class="lineee col"></div>
             </div>
             <div class="cp">
                 <div class="left">
                     <h1>Lorem ipsum dolor sit amet.</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet sequi consequuntur veritatis incidunt voluptates in debitis!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet sequi consequuntur veritatis
+                        incidunt voluptates in debitis!</p>
                 </div>
                 <div class="right">
                     <div class="cf">
+                        <div class="click">
+                            <img src="cf.png" alt="">
+                            <h2>Codeforces</h2>
+                        </div>
+                        <div class="trigger">
+                            <h3>Max Rating</h3>
+                            <h4 id="cfMaxRating" class="tcol"></h4>
+                            <h3>Max rank</h3>
+                            <h4 id="cfMaxRank" class="tcol"></h4>
+                            <h3>Handle</h3>
+                            <a href="https://codeforces.com/profile/ifti.k.hoq">
+                                <h4 class="tcol">ifti.k.hoq<i class="bi bi-link-45deg"></i></h4>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="lc">
+                        <div class="click">
+                            <img src="lc.png" alt="">
+                            <h2>Leet code</h2>
+                        </div>
+                        <div class="trigger">
+                            <h3>Total solve</h3>
+                            <h4 id="lcTotalSolve" class="tcol"></h4>
+                            <h3>Rank</h3>
+                            <h4 id="lcranking" class="tcol"></h4>
+                            <h3>Handle</h3>
+                            <a href="https://leetcode.com/u/ifti_k_hoq/">
+                                <h4 class="tcol">ifti_k_hoq<i class="bi bi-link-45deg"></i></h4>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="seemore">
+                        <h2>seemore</h2>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+        <div class="page4">
+            <div class="center-top">
+                <h1>Contact Me</h1>
+                <div class="lineee col"></div>
+            </div>
+            <div class="cp">
+                <div class="left">
+                    <form>
+                        <input type="text" class="con name" placeholder="Name">
+                        <input type="text" class="con email"  placeholder="Email">
+                        <input type="text" class="con subject"   placeholder="Subject">
+                        <input type="text" class="con body"  placeholder="Body">
+                        <button type="submit" class="submit">Send</button>
+
+                        <label>
+                            <input type="text" placeholder="Email Address"/>
+                          </label>
+                          <label>
+                            <input type="password" placeholder="Password"/>
+                          </label>
+                          <button class="red" type="button"><i class="icon ion-md-lock"></i> Log in</button>
+                    </form>
+                </div>
+                <div class="right">
+                    <div class="cf">
+
                         <img src="cf.png" alt="">
                         <h2>Codeforces</h2>
+
+
                         <h3>Max Rating</h3>
                         <h4 id="cfMaxRating" class="tcol"></h4>
                         <h3>Max rank</h3>
                         <h4 id="cfMaxRank" class="tcol"></h4>
                         <h3>Handle</h3>
-                        <a href="https://codeforces.com/profile/ifti.k.hoq"><h4 class="tcol">ifti.k.hoq<i class="bi bi-link-45deg"></i></h4></a>
+                        <a href="https://codeforces.com/profile/ifti.k.hoq">
+                            <h4 class="tcol">ifti.k.hoq<i class="bi bi-link-45deg"></i></h4>
+                        </a>
+
+
                     </div>
                     <div class="lc">
                         <img src="lc.png" alt="">
@@ -136,7 +216,9 @@
                         <h3>Rank</h3>
                         <h4 id="lcranking" class="tcol"></h4>
                         <h3>Handle</h3>
-                        <a href="https://leetcode.com/u/ifti_k_hoq/"><h4 class="tcol">ifti_k_hoq<i class="bi bi-link-45deg"></i></h4></a>
+                        <a href="https://leetcode.com/u/ifti_k_hoq/">
+                            <h4 class="tcol">ifti_k_hoq<i class="bi bi-link-45deg"></i></h4>
+                        </a>
                     </div>
                     <div class="seemore">
                         <h2>seemore</h2>
@@ -144,11 +226,16 @@
 
                 </div>
             </div>
-           
+
         </div>
     </main>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="script.js"></script>
-    </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+        integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+        integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="script.js"></script>
+</body>
+
 </html>
